// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: BUSL-1.1

syntax = "proto3";

package cty;

option go_package = "github.com/hashicorp/go-s2-plugin/sentinel-plugin/proto/cty";

message Type {

  enum Identifier {
    UNKNOWN_IDENTIFIER = 0;

    UNKNOWN = 1;
    STRING = 2;
    NUMBER = 3;
    BOOLEAN = 4;
    OBJECT = 5;
    TUPLE = 6;
    LIST = 7;
    SET = 8;
    MAP = 9;
  }

  Identifier identifier = 1;

  oneof Type {
    ObjectType object_type = 2;
    TupleType tuple_type = 3;
    Type element_type = 4;
  }
}

message ObjectType {
    map<string, Type> attributes = 1;
}

message TupleType {
    repeated Type elements = 1;
}

message Value {
  Type type = 1; // only specified if required

  repeated bytes marks = 2; // we only serialize string marks for now

  bool unknown = 3;

  oneof Value {
    string string_value = 4; // string and number
    bool boolean_value = 5; // boolean
    ListValue list_value = 6; // set, list, and tuple
    MapValue map_value = 7; // map and object
  }
}

message ListValue {
  repeated Value values = 1;
}

message MapValue {
  map<string, Value> values = 1;
}

message Path {
  repeated Step steps = 1;
}

message Step {
  oneof step {
    string attribute_step = 1;
    Value index_step = 2;
  }
}

message Function {
  string name = 1;

  repeated FunctionParameter parameters = 2;
  FunctionParameter variadic_parameter = 3;

  Type return_type = 4;

  string description = 5;
  string description_kind = 6;
}

message FunctionParameter {
  string name = 1;
  Type type = 2;

  string description = 3;

  bool allow_null = 4;
  bool allow_unknown = 5;
  bool allow_dynamic = 6;
  bool allow_marked = 7;
}
